# epiagentbench

./: .dockerignore  .gitignore  README.md  pyproject.toml
docker/: agent.Dockerfile  evaluator.Dockerfile
docs/: BENCHMARK_SPEC.md  CALIBRATION_PROTOCOL.md  EXTERNAL_CURVE_VALIDATION.md  HUMAN_EVALUATION_PROTOCOL.md  MODEL_CAPABILITY_REPORT_2026-07-15.md  OPERATIONAL_DATA_REQUEST.md  PERSISTENT_RUNNER_PROTOCOL.md  SCIENTIFIC_V3_PROTOCOL.md  SCIENTIFIC_VALIDATION.md
examples/: random_agent.py  run_cli_pilot.py  run_container_eval.py  run_development_matched_panel.py  run_development_opus_pilot.py  run_development_pilot.py  run_persistent_panel_supervisor.py
results/: development-four-profile-submit-report-v2-2026-07-15.cursor-audit.json  development-four-profile-submit-report-v2-2026-07-15.results.json  development-matched-50x4-v1.manifest.json  development-matched-50x4-v1.superseded.json  development-matched-50x6-v1.manifest.json  development-matched-50x6-v1.superseded.json  development-matched-50x6-v10.manifest.json  development-matched-50x6-v10.superseded.json  development-matched-50x6-v11.manifest.json  development-matched-50x6-v2.manifest.json  development-matched-50x6-v2.preflight.json  development-matched-50x6-v2.superseded.json  development-matched-50x6-v3.manifest.json  development-matched-50x6-v3.superseded.json  development-matched-50x6-v4.manifest.json  development-matched-50x6-v4.superseded.json  development-matched-50x6-v5.manifest.json  development-matched-50x6-v5.preflight.json  development-matched-50x6-v5.superseded.json  (+29 more)
tests/: test_benchmark.py  (+42 more)
(+63 files in other folders)
