[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "epiagentbench"
version = "0.1.0"
description = "A tamper-aware agent benchmark for outbreak alert verification and investigation"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
starsim = ["starsim==3.5.1"]

[project.scripts]
epiagentbench = "epiagentbench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
epiagentbench = ["data/*.json"]
